# BasicMathAndPhysicsSimulations

./: .gitlab-ci.yml  CMakeLists.txt  README.md
ext/imgui-master/: CMakeLists.txt
ext/mikroplot-main/ext/stb-master/: stb_image_write.h
ext/mikroplot-main/include/mikroplot/: graphics.h  window.h
ext/mikroplot-main/src/: framebuffer.cpp  window.cpp
include/: FileWritingFunctions.h
notebooks/: main_aabb_collisions.cpp  main_car_physics.cpp  main_collisions_with_mass.cpp  main_funcions.cpp  main_hello_world.cpp  main_newton_method.cpp  main_particles.cpp  main_point_rotation.cpp  main_rotating_box.cpp  main_simple_draw.cpp  main_simple_math.cpp  main_spring.cpp
submissions/practical_work/: harkka.h  physics_demo.cpp
submissions/t1/: test_draw_functions.cpp  vastaukset.md
submissions/t2/: test_integration.cpp  vastaukset.md
submissions/t3/: Testcases.h  Tester.h  math.cpp  math.h  test_math.cpp
submissions/t4/: sat.h  test_sat.cpp
submissions/t5/: particle_demo.cpp
submissions/t6/: spring_demo.cpp
submissions/t7/: collision_demo.cpp
submissions/t8/: car.h  car_demo.cpp  gameobject.h
